--- a/sass/main.scss
+++ b/sass/main.scss
@@ -926,10 +926,36 @@ a {
 	.card-doctor-profile{
 		padding: 1rem 0 1rem 0;
 		.btn-primary{
+			background: $dark-primary;
+			// outline: none;
+			border: none;
 			width: 100%;
 			font-size: 1.2rem;
 			font-weight: 700;
 			border-radius: 0;
+			transition: all .2s ease-in;
+		}
+		.btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus, .show > .btn-primary.dropdown-toggle:focus{
+			box-shadow: none;
+		}
+		.btn-primary:hover {
+			background: $primary;
+			// outline: none;
+			// border: none;
+			box-shadow: none;
+			transform: translateY(-3px);
+		}
+		.btn-primary:active{
+			transform: translateY(-1px);
+		}
+		.btn-primary:focus {
+			box-shadow: none;
+			color: $white;
+			
+		}
+		.btn:focus{
+			box-shadow: none;
+			border: none;
 		}
 	}
 	.card-doctor-icons{
@@ -977,4 +1003,79 @@ a {
 			border-right: 1px solid #8d8d8d;
 		}
 	}
+}
+
+.where {
+	.img-store{
+		display: flex;
+		img{
+			width: 30%;
+			margin-left: 1rem;
+		}
+	}
+}
+
+.stores {
+	padding: 5rem 0;
+	.row{
+		width: 100%;
+	}
+	// background-color: burlywood;
+	.story{
+		width: 70%;
+		margin: 0 auto;
+		box-shadow: 0 3rem 6rem rgba($black ,  .1);
+		border-radius: 3px;
+		padding: 2rem 2rem 2rem 3rem;
+		transform: skewX(-12deg);
+		background-color: rgb(255, 255, 255);
+		&-shape{
+			height: 10rem;
+			width: 10rem;
+			float: left;
+			// background-color: $dark-secondary;
+			margin: 0;
+			// margin-right: 1rem;
+			-wekit-shape-outside: circle(50% at 50% 50%);
+			shape-outside: circle(50% at 50% 50%);
+			-webkit-clip-path: circle(50% at 50% 50%);
+			clip-path: circle(50% at 50% 50%);
+			transform: translateX(-1rem) skewX(12deg);
+			position: relative;
+			overflow: hidden;
+		}
+		&-image {
+			 width: 100%;
+			 transform: scale(1.4);
+			 transition: all .5s;
+		}
+		&-text {
+			transform: skewX(12deg);
+		}
+		&-caption{
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			transform: translate(-50% , 30%);
+			font-weight: 600;
+			font-size: 1.7rem;
+			text-align: center;
+			color: floralwhite;
+			opacity: 0;
+			transition: all .5s;
+		}
+		&:hover .story-caption{
+			opacity: 1;
+			transform: translate(-50% , -50%);
+		}
+		&:hover .story-image{
+			transform: scale(1);
+			filter: blur(5px) brightness(80%);
+		}
+		
+		
+	}
+
+	
+	
 }
