--- a/style/css/style.css
+++ b/style/css/style.css
@@ -7547,10 +7547,27 @@ a {
   .card .card-doctor-profile {
     padding: 1rem 0 1rem 0; }
     .card .card-doctor-profile .btn-primary {
+      background: #1b927a;
+      border: none;
       width: 100%;
       font-size: 1.2rem;
       font-weight: 700;
-      border-radius: 0; }
+      border-radius: 0;
+      transition: all .2s ease-in; }
+    .card .card-doctor-profile .btn-primary:not(:disabled):not(.disabled):active:focus, .card .card-doctor-profile .btn-primary:not(:disabled):not(.disabled).active:focus, .card .card-doctor-profile .show > .btn-primary.dropdown-toggle:focus {
+      box-shadow: none; }
+    .card .card-doctor-profile .btn-primary:hover {
+      background: #0ec7a2;
+      box-shadow: none;
+      transform: translateY(-3px); }
+    .card .card-doctor-profile .btn-primary:active {
+      transform: translateY(-1px); }
+    .card .card-doctor-profile .btn-primary:focus {
+      box-shadow: none;
+      color: #ecf0f1; }
+    .card .card-doctor-profile .btn:focus {
+      box-shadow: none;
+      border: none; }
   .card .card-doctor-icons {
     display: flex;
     justify-content: space-between;
@@ -7568,3 +7585,57 @@ a {
         font-weight: 600; }
     .card .card-doctor-icons div:not(:last-child) {
       border-right: 1px solid #8d8d8d; }
+
+.where .img-store {
+  display: flex; }
+  .where .img-store img {
+    width: 30%;
+    margin-left: 1rem; }
+
+.stores {
+  padding: 5rem 0; }
+  .stores .row {
+    width: 100%; }
+  .stores .story {
+    width: 70%;
+    margin: 0 auto;
+    box-shadow: 0 3rem 6rem rgba(47, 54, 64, 0.1);
+    border-radius: 3px;
+    padding: 2rem 2rem 2rem 3rem;
+    transform: skewX(-12deg);
+    background-color: white; }
+    .stores .story-shape {
+      height: 10rem;
+      width: 10rem;
+      float: left;
+      margin: 0;
+      -wekit-shape-outside: circle(50% at 50% 50%);
+      shape-outside: circle(50% at 50% 50%);
+      -webkit-clip-path: circle(50% at 50% 50%);
+      clip-path: circle(50% at 50% 50%);
+      transform: translateX(-1rem) skewX(12deg);
+      position: relative;
+      overflow: hidden; }
+    .stores .story-image {
+      width: 100%;
+      transform: scale(1.4);
+      transition: all .5s; }
+    .stores .story-text {
+      transform: skewX(12deg); }
+    .stores .story-caption {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, 30%);
+      font-weight: 600;
+      font-size: 1.7rem;
+      text-align: center;
+      color: floralwhite;
+      opacity: 0;
+      transition: all .5s; }
+    .stores .story:hover .story-caption {
+      opacity: 1;
+      transform: translate(-50%, -50%); }
+    .stores .story:hover .story-image {
+      transform: scale(1);
+      filter: blur(5px) brightness(80%); }
